major fixes added user auth, folder structure, better working

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,10 @@ docx2python
 olefile
 slowapi==0.1.9
 structlog==24.4.0
+bcrypt==4.0.1
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+sqlalchemy==2.0.25
+email-validator
+alembic
+resend
